test/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imicros-gateway-deployment
spec:
  selector:
    matchLabels:
      app: imicros-gateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: imicros-gateway
        version: '0.1'
    spec:
      containers:
      - name: imicros-gateway
        image: al66/imicros-backend:latest
        env:
        - name: SERVICES
          value: "gateway, master"
        - name: MASTER_TOKEN
          value: "zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG"
        - name: SERVICE_TOKEN
          valueFrom:
            secretKeyRef:
              name: service-token
              key: token
        - name: TRANSPORTER_NATS
          value: "nats://nats:4222" 
        - name: CASSANDRA_CONTACTPOINTS
          value: "cassandra"
        - name: CASSANDRA_DATACENTER
          value: "datacenter1"
        - name: CASSANDRA_KEYSPACE_KEYS
          value: "imicros_keys"
        - name: CASSANDRA_PORT
          value: "9042"
        - name: CASSANDRA_USER
          value: "cassandra"
        - name: CASSANDRA_PASSWORD
          value: "cassandra"
        - name: NEO4J_URI
          value: "bolt://neo4j:7687"
        - name: NEO4J_USER
          value: "neo4j"
        - name: NEO4J_PASSWORD
          value: "neo4j"
        - name: EVENT_OWNER_ID
          value: "b07de817-2d8b-4470-9518-90f507bee154"
